--- a/index.html
+++ b/index.html
@@ -18,50 +18,51 @@
     <!-- main content -->
     <main class="mb-5">
         <div class="row">
+            <!-- image part -->
             <div class="image mb-5 col-lg-6">
                 <img class="img-fluid" src="./image/money.jpg" alt="">
             </div>
-
+            <!-- ledger part -->
             <div class="ledger-section col-lg-6">
                 <h2 class="mb-4">Income</h2>
                 <div class="d-flex justify-content-center align-items-center mb-4">
                     <div class="me-2 fs-5">Income:</div>
-                    <div><input type="number" class="text-center p-2 border-2" id=""></div>
+                    <div><input type="number" min="0" class="text-center p-2 border-2" id="income-ammount"></div>
                 </div>
 
                 <h2 class="mb-4">Expenses</h2>
                 <div class="d-flex justify-content-center align-items-center mb-3">
                     <div class="me-3 fs-5">Food:</div>
-                    <div><input type="number" class="text-center border-2 p-2" id=""></div>
+                    <div><input type="number" class="text-center border-2 p-2" id="food-cost"></div>
                 </div>
 
                 <div class="d-flex justify-content-center align-items-center mb-3">
                     <div class="me-4 fs-5">Rent:</div>
-                    <div><input type="number" class="text-center border-2 p-2" id=""></div>
+                    <div><input type="number" class="text-center border-2 p-2" id="house-cost"></div>
                 </div>
 
                 <div class="d-flex justify-content-center align-items-center mb-4">
                     <div class="me-2 fs-5">Clothes:</div>
-                    <div><input type="number" class="text-center border-2 p-2" id=""></div>
+                    <div><input type="number" class="text-center border-2 p-2" id="dress-cost"></div>
                 </div>
 
-                <div class="mb-4"><button class="button">Calculate</button></div>
+                <div class="mb-4"><button id="calculate" class="button">Calculate</button></div>
 
-                <div class="mb-3"><h2>Total Expenses: <span>00</span></h2></div>
+                <div class="mb-3"><h2>Total Expenses: <span id="total-expenses">00</span></h2></div>
 
-                <div class="mb-4"><h2>Balance: <span>00</span></h2></div>
+                <div class="mb-4"><h2>Balance: <span id="balance">00</span></h2></div>
 
                 <div class="d-md-flex justify-content-center align-items-center mb-4">
                     <div class="d-flex justify-content-center mb-3 mt-3">
                         <div class="me-2 fs-5">Save:</div>
-                    <div><input type="number" class="text-center me-2 p-2 border-2" id="" max="100"></div>
+                    <div><input type="number" class="text-center me-2 p-2 border-2" id="save-parcentage" min="0" max="100"></div>
                     </div>
                     <span class="fs-5">%</span>
-                    <div class="mb-4 ms-2 mt-4"><button class="button">Save</button>
+                    <div class="mb-4 ms-2 mt-4"><button class="button" id="save_button">Save</button>
                     </div>
                 </div>
 
-                <div class="mb-4"><h2>Saving Ammount: <span>00</span></h2></div>
+                <div class="mb-4"><h2>Saving Ammount: <span id="save-ammount">00</span></h2></div>
 
                 <div><h2>Remaining Balance: <span>00</span></h2></div>
             </div>
