--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <div class="mb-4"><h2>Saving Ammount: <span id="save-ammount">00</span></h2></div>
 
-                <div><h2>Remaining Balance: <span>00</span></h2></div>
+                <div><h2>Remaining Balance: <span id="remaining-balance">00</span></h2></div>
             </div>
             
         </div>
