--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
                 <h2 class="mb-4">Income</h2>
                 <div class="d-flex justify-content-center align-items-center mb-4">
                     <div class="me-2 fs-5">Income:</div>
-                    <div><input type="number" min="0" class="text-center p-2 border-2" id="income-ammount" placeholder="Enter Your Income"></div>
+                    <div><input type="number" min="0" class="text-center py-2 border-2" id="income-ammount" placeholder="Enter Your Income"></div>
                 </div>
 
                 <h2 class="mb-4">Expenses</h2>
                 <div class="d-flex justify-content-center align-items-center mb-3">
                     <div class="me-3 fs-5">Food:</div>
-                    <div><input type="number" class="text-center border-2 p-2" id="food-cost" placeholder="Enter Your Food Cost"></div>
+                    <div><input type="number" class="text-center border-2 py-2" id="food-cost" placeholder="Enter Your Food Cost"></div>
                 </div>
 
                 <div class="d-flex justify-content-center align-items-center mb-3">
                     <div class="me-4 fs-5">Rent:</div>
-                    <div><input type="number" class="text-center border-2 p-2" id="house-cost" placeholder="Enter Your House Rent"></div>
+                    <div><input type="number" class="text-center border-2 py-2" id="house-cost" placeholder="Enter Your House Rent"></div>
                 </div>
 
                 <div class="d-flex justify-content-center align-items-center mb-4">
                     <div class="me-2 fs-5">Clothes:</div>
-                    <div><input type="number" class="text-center border-2 p-2" id="dress-cost" placeholder="Enter Your Dress Cost"></div>
+                    <div><input type="number" class="text-center border-2 py-2" id="dress-cost" placeholder="Enter Your Dress Cost"></div>
                 </div>
 
                 <div class="mb-4"><button id="calculate" class="button">Calculate</button></div>
@@ -55,10 +55,10 @@
                 <div class="d-md-flex justify-content-center align-items-center mb-4">
                     <div class="d-flex justify-content-center align-items-center mb-3 mt-3">
                         <div class="me-2 fs-5">Save:</div>
-                    <div><input type="number" class="text-center me-2 p-2 border-2" id="save-parcentage" min="0" max="100"></div>
+                    <div><input type="number" class="text-center me-2 p-2 border-2" id="save-parcentage" min="0" placeholder="Enter Number"></div>
                     </div>
                     <span class="fs-5">%</span>
-                    <div class="mb-4 ms-2 mt-4"><button class="button" id="save_button">Save</button>
+                    <div class="mb-4 ms-2 mt-4"><button class="button" id="save_button" disabled>Save</button>
                     </div>
                 </div>
 
